--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b1d3cc14-5aae-4aeb-a6ec-f1e159231406"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
